logs/pymls.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.13.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymls'...
Compiling './lib/python3.5/site-packages/pymls/analysis.py'...
***   File "./lib/python3.5/site-packages/pymls/analysis.py", line 62
    raise ValueError(f'Invalid literal definition (tried range): {arg}')
                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pymls/interface'...
Listing './lib/python3.5/site-packages/pymls/layers'...
Compiling './lib/python3.5/site-packages/pymls/layers/layer.py'...
***   File "./lib/python3.5/site-packages/pymls/layers/layer.py", line 45
    raise ValueError(f"Invalid hook name. Use one of : {','.join(self.hooks.keys())}")
                                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pymls/media'...
Compiling './lib/python3.5/site-packages/pymls/media/__init__.py'...
***   File "./lib/python3.5/site-packages/pymls/media/__init__.py", line 25
    raise IOError(f'Unable to locate file {filename}')
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymls/media/medium.py'...
***   File "./lib/python3.5/site-packages/pymls/media/medium.py", line 38
    return f'{self.name} (type: {self.__class__.MEDIUM_TYPE}, model: {self.__class__.MODEL})'
                                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pymls/utils'...
Compiling './lib/python3.5/site-packages/pymls/utils/hdf5_export.py'...
***   File "./lib/python3.5/site-packages/pymls/utils/hdf5_export.py", line 68
    print(f'Unable to save into {filename} :\n\t{e}')
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymls/utils/yaml_loader.py'...
***   File "./lib/python3.5/site-packages/pymls/utils/yaml_loader.py", line 92
    raise ValueError(f'Invalid data type in definition of {primary_k}')
                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pymls-1.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/media_loading.py'...
***   File "./lib/python3.5/site-packages/test/media_loading.py", line 60
    fh.write(f'{p}: 42\n')
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/solver.py'...
***   File "./lib/python3.5/site-packages/test/solver.py", line 66
    f'(reflection) f={f}Hz, d={d}, theta=0'
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
